# asqarslanov

./: .prettierrc.toml  Cargo.toml  README.md  bun.lockb  package.json  pnpm-lock.yaml  svelte.config.js
.github/workflows/: deploy.yaml
.helix/: languages.toml
locales/: en.json
project.inlang/: settings.json
src/: main.rs
src/routes/: +page.svelte
