[package]
name = "asqarslanov"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.5.4", features = ["csr", "nightly"] }
leptos_i18n = { version = "0.2.3", features = ["csr", "nightly"] }

[package.metadata.leptos-i18n]
default = "en"
locales = ["en"]
